--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
-    "sort-by": "^1.2.0"
+    "react-slider": "^2.0.6",
+    "sort-by": "^1.2.0",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
