--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-slider": "^2.0.6",
+    "redux": "^5.0.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.7"
   },
